[package]
name = "isle_app_r"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = "0.19.0"
bytemuck = "1.23.0"
num-traits = "0.2.19"
static_assertions = "1.1.0"

[dependencies.zerocopy]
version = "0.8.25"
features = ["alloc", "std", "derive", "simd"]

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_DirectDraw",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_WindowsProgramming"
]
